Fixed issue with last element of a list being obscured on Mobiles.

--- a/public/main.css
+++ b/public/main.css
@@ -14,7 +14,7 @@
 body {
   padding: 0;
   margin: 0;
-  margin-top: 100px;
+  margin-top: 0;
   background: #eee;
 }
 
@@ -30,15 +30,9 @@ a:visited {
   color: var(--scoutpurple);
 }
 
-.container {
-  margin: 0 auto;
-  width: 100%;
-  /*  max-width: 960px; */
-}
-
 /* Home */
 .home img {
-  max-width: 230px;
+  max-width: 400px;
 }
 
 .home .destinations {
